--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -534,6 +534,9 @@
                                         <rect key="frame" x="76.5" y="126" width="61" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="gray" title="POST"/>
+                                        <connections>
+                                            <action selector="POST:" destination="n8k-UE-ati" eventType="touchUpInside" id="HoS-Er-o4j"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hOk-Q2-Y1u">
                                         <rect key="frame" x="81" y="168" width="52" height="31"/>
