--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -379,6 +379,21 @@
             </objects>
             <point key="canvasLocation" x="-374" y="-630"/>
         </scene>
+        <!--Test View Controller-->
+        <scene sceneID="q8h-MB-y9d">
+            <objects>
+                <viewController id="hfy-hn-UDM" customClass="TestViewController" customModule="FunctionList_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NTx-kw-jmv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="JAT-za-C8x"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LIa-h6-2wa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2965" y="-1411"/>
+        </scene>
         <!--Sign In AppleVC-->
         <scene sceneID="5aj-eK-EB4">
             <objects>
@@ -887,7 +902,7 @@
     </scenes>
     <designables>
         <designable name="hPd-pi-yT1">
-            <size key="intrinsicContentSize" width="32" height="34"/>
+            <size key="intrinsicContentSize" width="56" height="34"/>
         </designable>
     </designables>
     <resources>
